// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubMenu /> no options 1`] = `<div />`;

exports[`<SubMenu /> several options, one chosen without extractCurrentMenuChoice 1`] = `
<div>
  <li
    class="dropdown-submenu"
    role="presentation"
  >
    <a
      role="menuitem"
      tabindex="-1"
    >
      Test with several options
    </a>
    <i
      class="fa fa-chevron-down"
    />
  </li>
</div>
`;

exports[`<SubMenu /> two options, one chosen 1`] = `
<div>
  <li
    class=""
    role="presentation"
  >
    <a
      href="go/to/option1"
      role="menuitem"
      tabindex="-1"
    >
      first option
    </a>
  </li>
  <li
    class=""
    role="presentation"
  >
    <a
      href="go/to/option2"
      role="menuitem"
      tabindex="-1"
    >
      second option
    </a>
  </li>
</div>
`;

exports[`<SubMenu /> two options, one chosen but inlineItemsCount 0 1`] = `
<div>
  <li
    class=""
    role="presentation"
  >
    <a
      href="go/to/option1"
      role="menuitem"
      tabindex="-1"
    >
      first option
    </a>
  </li>
  <li
    class="dropdown-submenu"
    role="presentation"
  >
    <a
      role="menuitem"
      tabindex="-1"
    >
      Test with two options
    </a>
    <i
      class="fa fa-chevron-down"
    />
  </li>
</div>
`;

exports[`<SubMenu /> with options but none chosen 1`] = `
<div>
  <li
    class="dropdown-submenu"
    role="presentation"
  >
    <a
      role="menuitem"
      tabindex="-1"
    >
      Test with options not chosen
    </a>
    <i
      class="fa fa-chevron-down"
    />
  </li>
</div>
`;
